ghc-4335c07/testsuite/tests/typecheck/should_fail/T9305.hs
{-# LANGUAGE DeriveFunctor#-}
module Main where

data Event a b = Event a deriving (Functor)

newtype F f = F (f (F f))

data EventF a = EventF (F (Event a)) deriving (Functor)
