ghc-4335c07/testsuite/tests/typecheck/should_fail/T9305.stderr

T9305.hs:8:48: error:
    Couldn't match kind ‘* -> *’ with ‘*’
      arising from the first field of ‘EventF’ (type ‘F (Event a)’)
    When deriving the instance for (Functor EventF)
